fix old css to align with bootstrap divs

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -152,16 +152,13 @@ abbr {
     padding-top: 1.2em;
 }
 
-
 .core {
     padding: 1em;
     background: #ffffff;
     border: 0px solid #aaa;
     border-radius:0.5em;
     -moz-border-radius: 0.5em;
-    margin: 0 0.25em 0.5em 0.25em;
 }
-
 
 .core-tabbed {
     padding: 1em;
@@ -169,21 +166,17 @@ abbr {
     border: 0px solid #aaa;
     border-radius: 0em 0.5em 0.5em 0.5em;
     -moz-border-radius: 0.5em;
-    margin: 0 0.25em 0.5em 0em;
 }
-
 
 .box {
     padding: 0.5em;
     border: 1px solid #aaa;
     border-radius:0.5em;
     -moz-border-radius: 0.5em;
-    margin: 0 0.25em 0.5em 0.25em;
 }
 
 .boxnoframe {
     padding: 0.5em;
-    margin: 0 0.25em 0.5em 0.25em;
 }
 
 .clickable, [data-action] {
